[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Xavier Moreno <xaviml.93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
commitizen = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
